--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     build: .
     env_file: .env
     ports:
-      - "10000:10000"
+      - "5176:5176"
     volumes:
-      - ./src:/app/src
+      - .:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    
