--- a/package.json
+++ b/package.json
@@ -4,36 +4,33 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "boxicons": "^2.1.4",
     "is-core": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-icons": "^4.11.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
-    "redux": "^4.2.0",
-    "redux-saga": "^1.2.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
-    "styled-components": "^5.3.6",
-    "wretch": "^2.1.5"
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.2.4",
     "vite": "^4.4.5"
   }
