--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "boxicons": "^2.1.4",
     "is-core": "^1.0.0",
     "react": "^18.2.0",
