--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.11.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "universal-cookie": "^6.1.1"
