--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.44.0",
     "axios": "^1.6.0",
     "boxicons": "^2.1.4",
     "is-core": "^1.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
